Fixed FilterHead Alignment

--- a/app/src/components/FilterHeader/FilterHeader.module.css
+++ b/app/src/components/FilterHeader/FilterHeader.module.css
@@ -1,7 +1,8 @@
 .filter_header {
   display: flex;
   gap: 4px;
-  /* justify-content: center; */
+  justify-content: center;
+  /* text-align: center; */
   padding: var(--margin);
 
   position: sticky;
@@ -13,6 +14,9 @@
   text-transform: capitalize;
 
   height: var(--filter-height);
+
+  /* Horizontal edge fade using white instead of transparent */
+  background: linear-gradient(to right, white 0%, var(--background) 10%, var(--background) 90%, white 100%);
 }
 
 .filter_header li {
